replace Delicious font with EB Garamond

--- a/fonts/Makefile
+++ b/fonts/Makefile
@@ -1,6 +1,6 @@
-FONT_DIRS := delicious-123 roboto roboto-mono roboto-slab source-code-pro source-sans-pro source-serif-pro
+FONT_DIRS := eb-garamond roboto roboto-mono roboto-slab source-code-pro source-sans-pro source-serif-pro
 
-DELICIOUS_ZIP        := http://www.exljbris.com/dl/DELICIOUS_21_OTF.zip
+EB_GARAMOND_ZIP      := https://bitbucket.org/georgd/eb-garamond/downloads/EBGaramond-0.016.zip
 ROBOTO_ZIP           := https://github.com/googlefonts/roboto/releases/download/v2.138/roboto-unhinted.zip
 ROBOTO_MONO_ZIP      := https://github.com/googlefonts/RobotoMono/archive/8f651634e746da6df6c2c0be73255721d24f2372.zip
 ROBOTO_SLAB_ZIP      := https://github.com/googlefonts/robotoslab/archive/a65e6d00d8e3e7ee2fabef844e58fa12690384d2.zip
@@ -17,9 +17,7 @@ default: all
 .PHONY: all
 all: sources
 	mkdir -p $(FONT_DIRS)
-	cd delicious-123 && unzip -j /tmp/delicious.zip "DELICIOUS_21_OTF/*.otf" $(UNZIP_FLAGS)
-	cd delicious-123 && ln -sf Delicious_R_2021.otf Delicious-Roman.otf
-	cd delicious-123 && ln -sf Delicious_SC_2021.otf Delicious-SmallCaps.otf
+	cd eb-garamond && unzip -j /tmp/eb-garamond.zip "EBGaramond-0.016/otf/*.otf" $(UNZIP_FLAGS)
 	cd roboto && unzip -j /tmp/roboto.zip "*.ttf" $(UNZIP_FLAGS)
 	cd roboto-mono && unzip -j /tmp/roboto-mono.zip "RobotoMono-8f651634e746da6df6c2c0be73255721d24f2372/fonts/ttf/*.ttf" $(UNZIP_FLAGS)
 	cd roboto-slab && unzip -j /tmp/roboto-slab.zip "robotoslab-a65e6d00d8e3e7ee2fabef844e58fa12690384d2/fonts/static/*.ttf" $(UNZIP_FLAGS)
@@ -29,7 +27,7 @@ all: sources
 
 .PHONY: sources
 sources:
-	wget $(DELICIOUS_ZIP) -O /tmp/delicious.zip
+	wget $(EB_GARAMOND_ZIP) -O /tmp/eb-garamond.zip
 	wget $(ROBOTO_ZIP) -O /tmp/roboto.zip
 	wget $(ROBOTO_MONO_ZIP) -O /tmp/roboto-mono.zip
 	wget $(ROBOTO_SLAB_ZIP) -O /tmp/roboto-slab.zip
