fix requirements Makefile

--- a/requirements/Makefile
+++ b/requirements/Makefile
@@ -2,13 +2,11 @@
 default: all
 
 .PHONY: all
-all: requirements-base.txt requirements.txt
+all: requirements.txt
 
 .PHONY: install
-install: requirements-base.txt requirements.txt
+install: requirements.txt
 	pip-sync $^
-
-requirements.txt: requirements-base.txt
 
 %.txt: %.in
 	pip-compile $<
