--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -8,6 +8,8 @@
 
 appdirs==1.4.4
     # via virtualenv
+bump2version==1.0.1
+    # via -r requirements.in
 cartopy==0.19.0.post1
     # via -r requirements.in
 cfgv==3.2.0
