remove and stop tracking built cheatsheets and handouts
- remove out-of-date artifacts
- add build artifacts to gitignore
- update README to link up-to-date artifacts at matplotlib.org

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+# built cheatsheets and handouts
+# ----------------------------------
+cheatsheets*.p[dn][fg]
+handout-*.p[dn][fg]
+
 # TeX auxiliary files
 # ----------------------------------
 *.aux
