fix matplotlib logo

--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -5,6 +5,14 @@ current_version = 3.4.2
 search = Matplotlib {current_version}
 replace = Matplotlib {new_version}
 
+[bumpversion:file:./Makefile]
+search = v{current_version}
+replace = v{new_version}
+
+[bumpversion:file:./cheatsheets.tex]
+search = Version {current_version}
+replace = Version {new_version}
+
 [bumpversion:file:./requirements/requirements.in]
 search = matplotlib=={current_version}
 replace = matplotlib=={new_version}
