--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -51,13 +51,9 @@ jobs:
           cp -r fonts/ /usr/share/fonts/
           fc-cache
           make all
-      - name: Check layouts
+      - name: Run checks
         run: |
-          set -x
-          [[ "$(pdfinfo cheatsheets.pdf          | grep Pages | awk '{print $2}')" == "2" ]] || exit 1
-          [[ "$(pdfinfo handout-tips.pdf         | grep Pages | awk '{print $2}')" == "1" ]] || exit 1
-          [[ "$(pdfinfo handout-beginner.pdf     | grep Pages | awk '{print $2}')" == "1" ]] || exit 1
-          [[ "$(pdfinfo handout-intermediate.pdf | grep Pages | awk '{print $2}')" == "1" ]] || exit 1
+          make check
       - uses: actions/upload-artifact@v2
         if: ${{ always() }}
         with:
