--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -12,10 +12,18 @@ bump2version==1.0.1
     # via -r requirements.in
 cartopy==0.19.0.post1
     # via -r requirements.in
+cffi==1.15.0
+    # via cryptography
 cfgv==3.2.0
     # via pre-commit
+chardet==4.0.0
+    # via
+    #   pdfminer.six
+    #   pdfx
 click==8.0.0
     # via pip-tools
+cryptography==35.0.0
+    # via pdfminer.six
 cycler==0.10.0
     # via matplotlib
 distlib==0.3.1
@@ -40,6 +48,10 @@ numpy==1.19.5
     #   cartopy
     #   matplotlib
     #   scipy
+pdfminer.six==20201018
+    # via pdfx
+pdfx==1.4.1
+    # via -r requirements.in
 pep517==0.10.0
     # via pip-tools
 pillow==8.1.2
@@ -48,6 +60,8 @@ pip-tools==6.1.0
     # via -r requirements.in
 pre-commit==2.11.1
     # via -r requirements.in
+pycparser==2.20
+    # via cffi
 pyparsing==2.4.7
     # via matplotlib
 pyshp==2.1.3
@@ -65,6 +79,8 @@ six==1.15.0
     #   cycler
     #   python-dateutil
     #   virtualenv
+sortedcontainers==2.4.0
+    # via pdfminer.six
 toml==0.10.2
     # via
     #   pep517
