--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,15 +1,11 @@
+exclude: |
+  (?x)^(
+    .+[.]svg|
+  )$
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v3.4.0
+    rev: v4.0.1
     hooks:
       - id: check-yaml
       - id: end-of-file-fixer
-        files: (?x)^(
-          [\w-]+[.]tex|
-          scripts/[\w-]+[.]py|
-          )$
       - id: trailing-whitespace
-        files: (?x)^(
-          [\w-]+[.]tex|
-          scripts/[\w-]+[.]py|
-          )$
