--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -1,6 +1,10 @@
 [bumpversion]
 current_version = 3.4.2
 
+[bumpversion:file:./check-matplotlib-version.py]
+search = __version__ == '{current_version}'
+replace = __version__ == '{new_version}'
+
 [bumpversion:glob:./handout-*.tex]
 search = Matplotlib {current_version}
 replace = Matplotlib {new_version}
