--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -48,6 +48,8 @@ filelock==3.0.12
     # via virtualenv
 flake8==4.0.1
     # via -r requirements.in
+fonttools==4.28.3
+    # via matplotlib
 identify==2.2.2
     # via pre-commit
 idna==3.3
@@ -66,7 +68,7 @@ kiwisolver==1.3.1
     # via matplotlib
 markupsafe==2.0.1
     # via jinja2
-matplotlib==3.4.2
+matplotlib==3.5.0
     # via -r requirements.in
 mccabe==0.6.1
     # via flake8
@@ -80,7 +82,10 @@ numpy==1.19.5
     #   matplotlib
     #   scipy
 packaging==21.2
-    # via sphinx
+    # via
+    #   matplotlib
+    #   setuptools-scm
+    #   sphinx
 pdfminer.six==20201018
     # via pdfx
 pdfx==1.4.1
@@ -121,6 +126,8 @@ requests==2.26.0
     # via sphinx
 scipy==1.5.4
     # via -r requirements.in
+setuptools-scm==6.3.2
+    # via matplotlib
 shapely==1.7.1
     # via cartopy
 six==1.15.0
@@ -155,6 +162,8 @@ toml==0.10.2
     #   autopep8
     #   pep517
     #   pre-commit
+tomli==1.2.2
+    # via setuptools-scm
 typing-extensions==4.0.0
     # via importlib-metadata
 urllib3==1.26.7
